--- a/webVRender/shell.html
+++ b/webVRender/shell.html
@@ -875,6 +875,7 @@
         }
 
         const appName = "placeholder1";
+        const defaultImGUILayoutIni = placeholder2;
 
         var Module = {
             preRun: [],
