rollback to freetype.

--- a/webVRender/shell.html
+++ b/webVRender/shell.html
@@ -875,7 +875,7 @@
         }
 
         const appName = "placeholder1";
-        const defaultImGUILayoutIni = placeholder2;
+        const defaultImGUILayoutIni = "placeholder2";
 
         var Module = {
             preRun: [],
