--- a/webVRender/shell.html
+++ b/webVRender/shell.html
@@ -972,7 +972,14 @@
 
     var Module = {
         preRun: [], postRun: [], canvas,
-        print: () => {}, printErr: () => {}, setStatus: () => {},
+        print: function (text) {
+            if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
+            console.log(text);
+        },
+        printErr: function (text) {
+            if (arguments.length > 1) text = Array.prototype.slice.call(arguments).join(' ');
+            console.error(text);
+        }, setStatus: () => {},
         totalDependencies: 0, monitorRunDependencies: () => {}
     };
 
